--- a/client.html
+++ b/client.html
@@ -21,7 +21,7 @@
             };
 
             try {
-                const response = await fetch("https://fahriprastama.com/", {
+                const response = await fetch(`https://fahriwps.up.railway.app/api/v1/data/`, {
                     method: "GET",
                     headers
                 });
@@ -55,9 +55,9 @@
             const userInput = document.getElementById("jsonInput").value;
 
             try {
-                const response = await fetch("https://fahriprastama.com/", {
+                const response = await fetch(`https://fahriwps.up.railway.app/api/v1/data/`, {
                     method: "POST",
-                    headers,
+                    headers,    
                     body: userInput
                 });
 
@@ -65,9 +65,6 @@
                 // POST request was successful, display a success message
                 const data = await response.json();
                 displayResponse(data);
-            } else if (response.status === 403) {
-                // POST request is forbidden (HTTP 403), display a message for not allowed
-                displayResponse("POST request not allowed for this domain.");
             } else {
                 // POST request failed for some other reason, display an error message
                 displayResponse("POST request failed.");
@@ -86,7 +83,7 @@
             const dataId = prompt("Enter the ID of the data to delete:");
 
             try {
-                const response = await fetch("https://fahriprastama.com/${dataId}", {
+                const response = await fetch(`https://fahriwps.up.railway.app/api/v1/data/${dataId}`, {
                     method: "DELETE",
                     headers
                 });
@@ -94,9 +91,16 @@
                 if (response.status === 200) {
                     // DELETE request was successful, display a success message
                     displayResponse("DELETE request successful!");
+                } else if (response.status === 404) {
+                displayResponse("DELETE data not found");
+                } else if (response.status === 403) {
+                // DELETE request is forbidden (HTTP 403), display a message for not allowed
+                displayResponse("DELETE request not allowed for this domain.");
                 } else {
                     // DELETE request failed, display an error message
                     displayResponse("DELETE request failed.");
+                    const data = await response.json();
+                    displayResponse(data);
                 }
             } catch (error) {
                 console.error("Error:", error);
